# coar

./: .dockerignore  .gitignore  .gitmodules  CoAR.opam  Dockerfile  LICENSE  README.md  dune  dune-project  main.ml
cav21ae_dt/: Dockerfile  README.md  aprove.plt  irankfinder.plt  term-comp20.csv  ultimate.plt
cav21ae_rel/: Dockerfile  README.md  exp.sh
lib/: dune  solver.ml
lib/CHCOpt/: dune  problem.ml
lib/CHCOptSolver/: config.ml  dune  solver.ml
lib/DQSAT/: dune  problem.ml
lib/EffCaml/: cgen.ml  config.ml  dune  solver.ml
lib/HOMC/: EHMTT.ml  RSFD.ml  dune  lexer.mll  parser.mly  problem.ml  reducer.ml  refType.ml  typeSystem.ml
lib/HOMCSat/: config.ml  dune  solver.ml
lib/HOMCSolver/: config.ml  dune  solver.ml
lib/HOSAT/: dune  problem.ml
lib/Hoice/: config.ml  dune  solver.ml
lib/HorSat2/: config.ml  dune  solver.ml
lib/LTS/: T2Lexer.mll  T2Parser.mly  dune  parser.ml  problem.ml
lib/MiniSat/: config.ml  dune  solver.ml
lib/MuCyc/: apronInterface.ml  config.ml  dune  lemma.ml  problem.ml  proofSearch.ml  proofTree.ml  qsat.ml  relProofSearch.ml  sequent.ml  solver.ml
lib/MuVal/: config.ml  dune  reducer.ml  solver.ml
lib/OptPCSat/: config.ml  dune  lexicoNonOptChecker.ml  maximalityChecker.ml  minimalityChecker.ml  nonOptChecker.ml  optimalityChecker.ml  optimizer.ml  solver.ml  tupleExtracter.ml
lib/OptiMathSAT/: config.ml  dune  solver.ml
lib/PCSat/: config.ml  dimReducer.ml  dune  pvarEliminator.ml  solPrinter.ml  solver.ml
lib/PCSat/bf_synthesis/: BFSynthesizer.ml  DT_BFSynthesizer.ml  MCTS_BFSynthesizer.ml  SCQM_BFSynthesizer.ml  boolFunction.ml  decisionTree.ml  dune
lib/PCSat/classification/: BFSB_Classifier.ml  DT_WFClassifier.ml  FNClassifier.ml  RGB_FNClassifier.ml  TB_Classifier.ml  WFClassifier.ml  classifier.ml  dune
lib/PCSat/common/: QDep.ml  RLConfig.ml  clauseGraph.ml  context.ml  dune  exAtom.ml  exAtomSet.ml  exClause.ml  exClauseSet.ml  hypSpace.ml  messenger.ml  state.ml  truthTable.ml  versionSpace.ml
lib/PCSat/coordination/: coordinator.ml  dune  parallelCoordinator.ml  portfolioCoordinator.ml  pseudoParallelCoordinator.ml  sequentialCoordinator.ml
lib/PCSat/labeling/: NWFLoopDetector.ml  dune  labeler.ml  loopDetector.ml
lib/PCSat/preprocessing/: dimReducer.ml  dune  preprocessor.ml  pvarEliminator.ml
lib/PCSat/qualifier/: NN.ml  SVM.ml  allTheory.ml  arrayTheory.ml  dtTheory.ml  dune  generator.ml  interval.ml  null.ml  octagon.ml  octahedron.ml  polyhedron.ml  polynomial.ml  union.ml
lib/PCSat/regression/: DT_Regressor.ml  dune  regressor.ml
lib/PCSat/resolution/: SMTResolver.ml  dune  graphResolver.ml  oldResolver.ml  resolver.ml
lib/PCSat/sat_checking/: dune  loopDetector.ml  satChecker.ml
lib/PCSat/synthesis/: CBSynthTemplateUpdateStrategy.ml  CBSynthesizer.ml  CandidateChecker.ml  PASynthesizer.ml  TBSynthesizer.ml  dune  solutionTemplate.ml  synthesizer.ml  templateUpdateStrategy.ml
lib/PCSat/template/: FNPredicate.ml  FNPredicateFlex.ml  NEPredicate.ml  NWFPredicate.ml  ParityPredicate.ml  WFPredicate.ml  WFPredicateFlex.ml  admPredicate.ml  arith.ml  dune  function.ml  generator.ml  intFunction.ml  intFunctionFlex.ml  integPredicate.ml  predicate.ml  predicateArrays.ml  predicateDNF.ml  predicateFlex.ml  regEx.ml
lib/PCSat/validation/: cex.ml  dune  validator.ml
lib/PLTS/: dune  parser.ml  problem.ml
lib/PolyQEnt/: config.ml  dune  solver.ml
lib/Printer/: config.ml  dune  smtlib2.ml  solver.ml
lib/ProbMuCLP/: dune  lexer.mll  parser.mly  pred.ml  problem.ml  util.ml
lib/QFL/: dune  lexer.mll  parser.mly  pred.ml  problem.ml  util.ml
lib/QSMT/: dune  strategySynthesis.ml
lib/RCaml/: MBcgen.ml  MBcsol.ml  cgen.ml  config.ml  dune  envs.ml  problem.ml  refTypLexer.mll  refTypParser.mly  solver.ml
lib/SAT/: dune  parser.ml  problem.ml
lib/SATSolver/: config.ml  dune  solver.ml
lib/SGCL/: dune  lexer.mll  parser.mly  sgclSyntax.ml  util.ml  variables.ml
lib/SMT/: dune  lexer.mll  parser.mly  printer.ml  problem.ml  smtlib2.ml
lib/SMTSolver/: config.ml  dune  solver.ml
lib/SPACER/: config.ml  dune  solver.ml
lib/SyGuS/: dune  invParser.ml  invPrinter.ml  parser.ml  printer.ml  problem.ml
lib/TRecS/: config.ml  dune  solver.ml
lib/Z3Sat/: config.ml  dune  solver.ml  z3interface.ml
lib/Z3Smt/: config.ml  dune  solver.ml  z3interface.ml  z3interfaceNew.ml
lib/ast/: affine.ml  affine.mli  affineTerm.ml  arithTerm.ml  assertion.ml  candSol.ml  candSolOld.ml  clause.ml  clauseGraph.ml  clauseOld.ml  clauseSet.ml  clauseSetOld.ml  constDatatype.ml  dune  env.ml  env.mli  evaluator.ml  exAtom.ml  exAtomSet.ml  exClause.ml  exClauseSet.ml  formulaUtil.ml  generator.ml  hypSpace.ml  ident.ml  kind.ml  logic.ml  logicOld.ml  mbp.ml  mcmc.ml  normalizer.ml  pattern.ml  polyTerm.ml  propLogic.ml  qelim.ml  qual.ml  qualArr.ml  qualDT.ml  qualDep.ml  rank.ml  (+10 more)
lib/automata/: ATA.ml  RTA.ml  TTA.ml  dune  treeAutomaton.ml
lib/c/: baLexer.mll  baParser.ml  baParser.mli  baParsing.mly  cCtlLexer.mll  cCtlParser.mly  cLtlLexer.mll  cLtlParser.mly  cSyntax.ml  dune  hesOf.ml  hesOf.mli  linked.ml  logicConverter.ml  logicConverter.mli  optimizer.ml  parser.ml  parser.mli  variables.ml
lib/cCtl/: c.ml  c.mli  cLexer.mll  cParser.mly  cSyntax.ml  dune  hesOf.ml  hesOf.mli  linked.ml  optimizer.ml  variables.ml
lib/common/: combinator.ml  contFrac.ml  debug.ml  dune  ext.ml  lazyList.ml  messenger.ml  timer.ml  unionFind.ml  unionFind.mli  unionFindInt.ml  util.ml  zipper.ml
lib/grammar/: dune  regTreeExp.ml  regTreeExpLexer.mll  regTreeExpParser.mly  regWordExp.ml
lib/minisat/: config.ml  dune  solver.ml
lib/muCLP/: HESLexer.mll  HESParser.mly  desugar.ml  dune  lexer.mll  optimizer.ml  optimizer.mli  parser.ml  parser.mli  parser.mly  pred.ml  pred.mli  problem.ml  problem.mli  qelim.ml  reducer.ml  util.ml
lib/pCSP/: LPLexer.mll  LPParser.mly  dune  forwardPropagate.ml  kind.ml  params.ml  parser.ml  problem.ml  problem.mli  solSpace.ml
lib/pCSPSolver/: config.ml  dune  solver.ml
lib/pGCL/: dune  lexer.mll  parser.mly  pgclSyntax.ml  util.ml
(+3554 files in other folders)
