opam-version: "2.0"
name: "CoAR"
version: "2.1"
maintainer: "Hiroshi Unno <uhiro@cs.tsukuba.ac.jp>"
authors: "Hiroshi Unno <uhiro@cs.tsukuba.ac.jp>"
homepage: "https://github.com/hiroshi-unno/coar"
bug-reports: "https://github.com/hiroshi-unno/coar/issues"
synopsis: "Collection of Automated Reasoners"
description: ""
pin-depends: [
  ["libsvm.0.10.0~modified" "git+https://github.com/hiroshi-unno/libsvm-ocaml.git"]
]
depends: [
  "ocaml" {>= "5.1"}
  "core" {>= "v0.16.0"}
  "core_unix"
  "domainslib"
  "menhir"
  "ppx_deriving_yojson"
  "ocaml-compiler-libs"
  "ocamlgraph"
  "zarith" {>= "1.9"}
  "z3" {>= "4.8.8"}
  "minisat"
  "libsvm" {= "0.10.0~modified"}
]
build: ["dune" "build"]
