opam-version: "2.0"
name: "CoAR"
version: "3.1"
maintainer: "Hiroshi Unno <hiroshi.unno@acm.org>"
authors: "Hiroshi Unno <hiroshi.unno@acm.org>"
homepage: "https://github.com/hiroshi-unno/coar"
bug-reports: "https://github.com/hiroshi-unno/coar/issues"
synopsis: "Collection of Automated Reasoners"
description: ""
pin-depends: [
  ["libsvm.0.10.0~modified" "git+https://github.com/hiroshi-unno/libsvm-ocaml.git"]
]
depends: [
  "ocaml" {>= "5.2"}
  "core" {>= "v0.16.0"}
  "core_unix"
  "domainslib"
  "menhir"
  "ppx_deriving_yojson"
  "ocaml-compiler-libs"
  "ocamlgraph"
  "zarith" {>= "1.9"}
  "z3" {>= "4.8.8"}
  "minisat"
  "libsvm" {= "0.10.0~modified"}
  "camlzip"
]
build: ["dune" "build"]
