(library
  (name CoAR)
  (public_name CoAR)
  (libraries
    core
    async
    CoAR.Z3Sat
    CoAR.MINISAT
    CoAR.Z3Smt
    CoAR.SyGuS
    CoAR.PCSat
    CoAR.SPACER
    CoAR.Hoice
    CoAR.MuVal
    CoAR.Printer
    CoAR.cCtl
    CoAR.LTS)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson))
  (modules solver))
