(library
 (name CoAR)
 (public_name CoAR)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  core
  CoAR.Z3Sat
  CoAR.MiniSat
  CoAR.Z3Smt
  CoAR.TRecS
  CoAR.HorSat2
  CoAR.SPACER
  CoAR.Hoice
  CoAR.SyGuS
  CoAR.PCSat
  CoAR.MuVal
  CoAR.MuCyc
  CoAR.Printer
  CoAR.RCaml
  CoAR.EffCaml
  CoAR.c)
 (modules solver))
