(library
 (name MuCyc)
 (public_name CoAR.MuCyc)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries
  core
  yojson
  apronext
  CoAR.common
  CoAR.ast
  CoAR.SMT
  CoAR.Z3Smt
  CoAR.PCSPSolver
  CoAR.muCLP)
 (modules
  config
  sequent
  lemma
  proofTree
  problem
  proofSearch
  relProofSearch
  apronInterface
  qsat
  solver)
 (synopsis "A fixpoint logic validity checker based on cyclic-proof search"))
