(library
  (name PCSat)
  (public_name CoAR.PCSat)
  (preprocess (pps ppx_deriving_yojson))
  (libraries
    CoAR.pCSP
    CoAR.SMT
    CoAR.PCSat.template
    CoAR.PCSat.coordination)
  (modules
    config
    pvarEliminator
    dimReducer
    solPrinter
    solver)
  (synopsis "A CHC/pfwnCSP/SyGuS solver based on CEGIS"))
