(library
 (name RCaml)
 (public_name CoAR.RCaml)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries
  core
  yojson
  compiler-libs.bytecomp
  compiler-libs.common
  CoAR.common
  CoAR.ast
  CoAR.SMT
  CoAR.CHCOpt
  CoAR.CHCOptSolver
  CoAR.PCSPSolver)
 (modules solver config problem MBcgen MBcsol cgen))
