(menhir
 (modules parser))

(ocamllex
 (modules lexer))

(library
 (name SGCL)
 (public_name CoAR.SGCL)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core CoAR.pCSP CoAR.ast CoAR.common CoAR.LTS CoAR.QFL)
 (modules SgclSyntax variables lexer parser util)
 (synopsis "The definition of SGCL"))
