(menhir
 (modules rtypeParser))

(ocamllex
 (modules rtypeLexer))

(library
 (name ast)
 (public_name CoAR.ast)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries core yojson zarith str ocamlgraph CoAR.common CoAR.grammar)
 (modules
  ident
  value
  pattern
  propLogic
  logic
  logicOld
  simpleFormula
  typeinf
  affine
  affineTerm
  polyTerm
  evaluator
  normalizer
  mbp
  qelim
  stratSynth
  generator
  mcmc
  templ
  qualDep
  qual
  qualDT
  qualArr
  rank
  exAtom
  exAtomSet
  clause
  clauseOld
  clauseSet
  clauseSetOld
  clauseGraph
  exClause
  exClauseSet
  kind
  solSpace
  hypSpace
  candSol
  candSolOld
  rtype
  rtypeLexer
  rtypeParser)
 (synopsis "AST definitions"))
