(menhir
 (modules HESParser))

(ocamllex
 (modules HESLexer))

(library
 (name muCLP)
 (public_name CoAR.muCLP)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core CoAR.pCSP CoAR.ast CoAR.common CoAR.LTS)
 (modules HESLexer HESParser parser pred problem optimizer qelim reducer)
 (synopsis "The definition of muCLP"))
