(menhir
 (modules parser))

(ocamllex
 (modules lexer))

(library
 (name muCLP)
 (public_name CoAR.muCLP)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core CoAR.pCSP CoAR.ast CoAR.common CoAR.LTS)
 (modules pred problem lexer parser util optimizer qelim reducer)
 (synopsis "The definition of muCLP"))
