(ocamllex (modules LPLexer))
(menhir (modules LPParser))

(library
  (name pCSP)
  (public_name CoAR.pCSP)
  (preprocess (pps ppx_deriving_yojson))
  (libraries
    core
    CoAR.ast
    CoAR.common
    CoAR.SyGuS
    CoAR.SMT
    CoAR.LTS)
  (modules
    params
    problem
    LPParser
    LPLexer
    parser
    solSpace
    kind
    forwardPropagate)
  (synopsis "The definition of pfwnCSP"))
