(menhir
 (modules parser))

(ocamllex
 (modules lexer))

(library
 (name pGCL)
 (public_name CoAR.pGCL)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core CoAR.pCSP CoAR.ast CoAR.common CoAR.LTS CoAR.QFL)
 (modules pgclSyntax variables lexer parser util)
 (synopsis "The definition of pGCL"))
