(library
 (name bf_synthesis)
 (public_name CoAR.PCSat.bf_synthesis)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries core yojson CoAR.SMT CoAR.pCSP CoAR.Z3Smt CoAR.PCSat.common)
 (modules
  BFSynthesizer
  boolFunction
  decisionTree
  DT_BFSynthesizer
  MCTS_BFSynthesizer
  SCQM_BFSynthesizer))
