(library
  (name PCSatCommon)
  (public_name CoAR.PCSat.common)
  (preprocess (pps ppx_deriving_yojson))
  (libraries
    core
    yojson
    CoAR.ast
    CoAR.common
    CoAR.Z3Smt
    CoAR.pCSP)
  (modules
    exAtom
    exAtomSet
    exClause
    exClauseSet
    clauseGraph
    truthTable
    context
    state
    messenger
    QDep
    versionSpace
    RLConfig))
