(library
 (name synthesis)
 (public_name CoAR.PCSat.synthesis)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries
  core
  yojson
  CoAR.Z3Smt
  CoAR.SAT
  CoAR.SATSolver
  CoAR.PCSat.common
  CoAR.PCSat.classification
  CoAR.PCSat.template
  CoAR.PCSat.qualifier)
 (modules
  synthesizer
  CBSynthTemplateUpdateStrategy
  templateUpdateStrategy
  solutionTemplate
  TBSynthesizer
  CandidateChecker
  CBSynthesizer
  PASynthesizer))
